--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "@angular-redux/store": "^9.0.0",
     "@angular/animations": "^11.2.2",
